force-app/main/default/objects/LicenseType__c/fields/DuplicateRenewalNotification__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRenewalNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN02032020-Created for PVL Phase 1 Sprint 3</description>
    <label>Duplicate Renewal Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Duplicate Renewal Form)</relationshipLabel>
    <relationshipName>License_TypesZrxo</relationshipName>
    <type>Lookup</type>
</CustomField>