force-app/main/default/objects/LicenseType__c/fields/DurationofLicenseInMonths__c.field-meta.xml
<CustomField>
    <fullName>DurationofLicenseInMonths__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1
PacPoint-KN081419 - Modified for PVL Phase 1</description>
    <inlineHelpText>The number of months of the License Period</inlineHelpText>
    <label>Duration of License (In Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>