force-app/main/default/objects/LicenseType__c/fields/DurationofRestorationInMonths__c.field-meta.xml
<CustomField>
    <fullName>DurationofRestorationInMonths__c</fullName>
    <description>PacPoint-KN081419 - Created for PVL Phase 1</description>
    <inlineHelpText>The number of months in the Restoration period.</inlineHelpText>
    <label>Duration of Restoration (In Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>