force-app/main/default/objects/LicenseType__c/fields/ElectiveHoursRequired__c.field-meta.xml
<CustomField>
    <fullName>ElectiveHoursRequired__c</fullName>
    <label>Elective Hours Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>