force-app/main/default/objects/LicenseType__c/fields/EligibleforClassifications__c.field-meta.xml
<CustomField>
    <fullName>EligibleforClassifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Classifications</label>
    <type>Checkbox</type>
</CustomField>