force-app/main/default/objects/LicenseType__c/fields/EligibleforOnlineRenewal__c.field-meta.xml
<CustomField>
    <fullName>EligibleforOnlineRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN082319-Created for PVL Phase 1</description>
    <label>Eligible for Online Renewal</label>
    <type>Checkbox</type>
</CustomField>