force-app/main/default/objects/LicenseType__c/fields/EligibleforPrivileges__c.field-meta.xml
<CustomField>
    <fullName>EligibleforPrivileges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Privileges</label>
    <type>Checkbox</type>
</CustomField>