force-app/main/default/objects/LicenseType__c/fields/EmploymentAllowed__c.field-meta.xml
<CustomField>
    <fullName>EmploymentAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employment Allowed</label>
    <type>Checkbox</type>
</CustomField>