force-app/main/default/objects/LicenseType__c/fields/EnableOnlineMedicalSurvey__c.field-meta.xml
<CustomField>
    <fullName>EnableOnlineMedicalSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature is used for Medical licenses.  If this is checked, licenses for this license type will be presented with an online medical survey when they renew online.</description>
    <label>Enable Online Medical Survey</label>
    <type>Checkbox</type>
</CustomField>