force-app/main/default/objects/LicenseType__c/fields/EndofRenewalPeriod__c.field-meta.xml
<CustomField>
    <fullName>EndofRenewalPeriod__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <formula>LicenseTypeExpireDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End of Renewal Period</label>
    <type>Date</type>
</CustomField>