force-app/main/default/objects/LicenseType__c/fields/EntityLosesRMENotification__c.field-meta.xml
<CustomField>
    <fullName>EntityLosesRMENotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN03162020-Created for PVL Phase 1 Sprint 3</description>
    <label>Entity Loses RME Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Entity Loses RME Notification)</relationshipLabel>
    <relationshipName>License_TypeskdLc</relationshipName>
    <type>Lookup</type>
</CustomField>