force-app/main/default/objects/LicenseType__c/fields/EntityLossofInsuranceNotification__c.field-meta.xml
<CustomField>
    <fullName>EntityLossofInsuranceNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN05142020 - Case 5171 - Created for PVL Phase 1 Sprint 3</description>
    <label>Entity Loss of Insurance Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Entity Loss of Insurance Notification)</relationshipLabel>
    <relationshipName>License_TypesrC1W</relationshipName>
    <type>Lookup</type>
</CustomField>