force-app/main/default/objects/LicenseType__c/fields/EntityPrincipalFlagUsed__c.field-meta.xml
<CustomField>
    <fullName>EntityPrincipalFlagUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN01-25-2022 - Created for Case 19573</description>
    <label>Entity/Principal Required?</label>
    <type>Checkbox</type>
</CustomField>