force-app/main/default/objects/LicenseType__c/fields/EntitytoEntityLicense__c.field-meta.xml
<CustomField>
    <fullName>EntitytoEntityLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN05212020-Created for PVL Phase 1 Sprint 4</description>
    <inlineHelpText>Used for Branch Lightning Page Layouts</inlineHelpText>
    <label>Entity to Entity License</label>
    <type>Checkbox</type>
</CustomField>