force-app/main/default/objects/LicenseType__c/fields/ExamApprovalNotification__c.field-meta.xml
<CustomField>
    <fullName>ExamApprovalNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN111829-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This is the template used to generate the Exam Approval (X1) Letter.</inlineHelpText>
    <label>Exam Approval Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Exam Approval Notification(X1))</relationshipLabel>
    <relationshipName>License_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>