force-app/main/default/objects/LicenseType__c/fields/ExcludeLicensesbyDateofLicensure__c.field-meta.xml
<CustomField>
    <fullName>ExcludeLicensesbyDateofLicensure__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <inlineHelpText>Used for Random Audit.  This will exclude certain licenses based on when the original date of licensure.</inlineHelpText>
    <label>Exclude Licenses by Date of Licensure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed within Current Biennium (First Renewal)</fullName>
            </value>
            <value>
                <fullName>Licensed within Current Triennium (First Renewal)</fullName>
            </value>
            <value>
                <fullName>Licensed in the 2nd half of Current Biennium (2NB)</fullName>
            </value>
            <value>
                <fullName>Licensed in the new License Period (New)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>