force-app/main/default/objects/LicenseType__c/fields/ExemptFromRenewalFee__c.field-meta.xml
<CustomField>
    <fullName>ExemptFromRenewalFee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint KN081419 - Created for PVL</description>
    <inlineHelpText>If checkbox is checked, License Type is exempt from renewal fees.</inlineHelpText>
    <label>Exempt From Renewal Fee</label>
    <type>Checkbox</type>
</CustomField>