force-app/main/default/objects/LicenseType__c/fields/FirstYearEnd__c.field-meta.xml
<CustomField>
    <fullName>FirstYearEnd__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <formula>(ADDMONTHS( FirstYearStart__c , 12 ))- 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year End</label>
    <type>Date</type>
</CustomField>