force-app/main/default/objects/LicenseType__c/fields/FirstYearStart__c.field-meta.xml
<CustomField>
    <fullName>FirstYearStart__c</fullName>
    <description>PacPoint-FT082919 - Created for PVL phase 1</description>
    <formula>LicenseTypeEffectiveDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Start</label>
    <type>Date</type>
</CustomField>