force-app/main/default/objects/LicenseType__c/fields/FlagLicenseandRenewNotifications__c.field-meta.xml
<CustomField>
    <fullName>FlagLicenseandRenewNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag License and Renew Notifications</label>
    <type>Checkbox</type>
</CustomField>