force-app/main/default/objects/LicenseType__c/fields/GenerateLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>GenerateLicenseStatus__c</fullName>
    <description>PacPoint-KN02142020-Created for PVL Phase 1 Sprint 3</description>
    <inlineHelpText>This is the status that the License will get set to upon generating it.</inlineHelpText>
    <label>Generate License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LicenseStatuses</valueSetName>
    </valueSet>
</CustomField>