force-app/main/default/objects/LicenseType__c/fields/GenerateRenewalNotice__c.field-meta.xml
<CustomField>
    <fullName>GenerateRenewalNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV110619 - Created for PVL phase 1</description>
    <label>Generate Renewal Notice</label>
    <type>Checkbox</type>
</CustomField>