force-app/main/default/objects/LicenseType__c/fields/GenerateRenewalPostcards__c.field-meta.xml
<CustomField>
    <fullName>GenerateRenewalPostcards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Renewal Postcards</label>
    <type>Checkbox</type>
</CustomField>