force-app/main/default/objects/LicenseType__c/fields/GenericInactiveRenewalForm__c.field-meta.xml
<CustomField>
    <fullName>GenericInactiveRenewalForm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Inactive Renewal Form</label>
    <type>Checkbox</type>
</CustomField>