force-app/main/default/objects/LicenseType__c/fields/GenericNotification__c.field-meta.xml
<CustomField>
    <fullName>GenericNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN06292020-Created for PVL Phase 1 Sprint 6</description>
    <label>Application Generic Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Generic Notification)</relationshipLabel>
    <relationshipName>License_Types0Ihz</relationshipName>
    <type>Lookup</type>
</CustomField>