force-app/main/default/objects/LicenseType__c/fields/Important__c.field-meta.xml
<CustomField>
    <fullName>Important__c</fullName>
    <defaultValue>&quot;By clicking &apos;Save&apos; you will generate renewal notices for all Licenses for this License Type that are eligible for renewal.&quot;</defaultValue>
    <description>PacPoint-MV120919 - Created for PVL phase 1.  Used to be display when generating the renewal form</description>
    <label>Important</label>
    <type>TextArea</type>
</CustomField>