force-app/main/default/objects/LicenseType__c/fields/InactiveFirmSoleOwnerRenewalFee__c.field-meta.xml
<CustomField>
    <fullName>InactiveFirmSoleOwnerRenewalFee__c</fullName>
    <description>PacPoint-KN06262020-Created for Phase 1 Sprint 6</description>
    <inlineHelpText>This field is being pulled onto the CT Renewal Postcard.</inlineHelpText>
    <label>Inactive Firm/Sole Owner Renewal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>