force-app/main/default/objects/LicenseType__c/fields/InactiveRenewalFee__c.field-meta.xml
<CustomField>
    <fullName>InactiveRenewalFee__c</fullName>
    <label>Inactive Renewal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>