force-app/main/default/objects/LicenseType__c/fields/INAofClassificationsNotification__c.field-meta.xml
<CustomField>
    <fullName>INAofClassificationsNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN03122020-Created for PVL Phase 1 Sprint 3</description>
    <label>INA of Classifications Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (INA of Classifications Notification)</relationshipLabel>
    <relationshipName>License_TypeskciQ</relationshipName>
    <type>Lookup</type>
</CustomField>