force-app/main/default/objects/LicenseType__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN111419-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>Populate this field when there is a dependency on this License Type.</inlineHelpText>
    <label>Individual</label>
    <type>Checkbox</type>
</CustomField>