force-app/main/default/objects/LicenseType__c/fields/IndivtoIndivLicense__c.field-meta.xml
<CustomField>
    <fullName>IndivtoIndivLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN04272020-Created for PVL Phase 1 Sprint 3 - used for Lightning Record Page Component Visibility for Associated Licenses</description>
    <label>Indiv to Indiv License</label>
    <type>Checkbox</type>
</CustomField>