force-app/main/default/objects/LicenseType__c/fields/InstructionsByExam__c.field-meta.xml
<CustomField>
    <fullName>InstructionsByExam__c</fullName>
    <description>https://hi-dcca--dccadev22.sandbox.my.salesforce.com/sfc/p/Hv0000008gAD/a/Hv0000003OaW/CjONZamVgnuLQVwC1W1Q1ft6SmBo.SKJ4L4UbRTv2fM</description>
    <label>Instructions - By Exam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>