force-app/main/default/objects/LicenseType__c/fields/InstructionsByReciprocity__c.field-meta.xml
<CustomField>
    <fullName>InstructionsByReciprocity__c</fullName>
    <label>Instructions - By Reciprocity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>