force-app/main/default/objects/LicenseType__c/fields/InsuranceBondTypesRequired__c.field-meta.xml
<CustomField>
    <fullName>InsuranceBondTypesRequired__c</fullName>
    <description>PacPoint-DN02042020 - Created for PVL Sprint 3 Phase 1</description>
    <label>Insurance/Bond Type(s) Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD - Bond</fullName>
            </value>
            <value>
                <fullName>BX - Bond Exemption (All Boards)</fullName>
            </value>
            <value>
                <fullName>EX - Exemption</fullName>
            </value>
            <value>
                <fullName>FS - Pre-Need Funeral Service Trust</fullName>
            </value>
            <value>
                <fullName>GM - Perpetual Care (Ground Maintenance) Trust</fullName>
            </value>
            <value>
                <fullName>LC - Line of Credit</fullName>
            </value>
            <value>
                <fullName>LI - Liability</fullName>
            </value>
            <value>
                <fullName>LP - Liability / Property Damage</fullName>
            </value>
            <value>
                <fullName>PI - Pre-Need Interment (Burial) Services Trust</fullName>
            </value>
            <value>
                <fullName>SI - Exclusion from Workers Comp.</fullName>
            </value>
            <value>
                <fullName>SL - Self-Insured for W/C (Entity OK&apos;d By Labor Dept)</fullName>
            </value>
            <value>
                <fullName>SM - No HI Employees - Submit Workers Comp Prior to Hiring</fullName>
            </value>
            <value>
                <fullName>SW - Workers Comp Thru Leasing Co.</fullName>
            </value>
            <value>
                <fullName>SX - Exemption No Longer Allowed</fullName>
            </value>
            <value>
                <fullName>T1 - Client Trust Account #1</fullName>
            </value>
            <value>
                <fullName>T2 - Client Trust Account #2</fullName>
            </value>
            <value>
                <fullName>T3 - Client Trust Account #3</fullName>
            </value>
            <value>
                <fullName>T4 - Client Trust Account #4</fullName>
            </value>
            <value>
                <fullName>T5 - Client Trust Account #5</fullName>
            </value>
            <value>
                <fullName>TC - Charter Tour</fullName>
            </value>
            <value>
                <fullName>WC - Workers Compensation</fullName>
            </value>
            <value>
                <fullName>WP - Submit Prior to Hiring Hi Empl - Evidence of WC Not Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>