force-app/main/default/objects/LicenseType__c/fields/InsuranceUpdateRequiredNotification__c.field-meta.xml
<CustomField>
    <fullName>InsuranceUpdateRequiredNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN04142020-Created for PVL Phase 1 Sprint 3</description>
    <label>Insurance Update Required Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Insurance Update Required Notification)</relationshipLabel>
    <relationshipName>License_TypespLoZ</relationshipName>
    <type>Lookup</type>
</CustomField>