force-app/main/default/objects/LicenseType__c/fields/LastFilingDeadline__c.field-meta.xml
<CustomField>
    <fullName>LastFilingDeadline__c</fullName>
    <inlineHelpText>Date after which the renewal form will not be accepted. Printed on the renewal form after text “DO NOT USE THIS FORM AFTER”). To keep its license the licensee must submit additional restoration requirements.</inlineHelpText>
    <label>Last Filing Deadline</label>
    <type>Date</type>
</CustomField>