force-app/main/default/objects/LicenseType__c/fields/LastReceivedDateAccepted__c.field-meta.xml
<CustomField>
    <fullName>LastReceivedDateAccepted__c</fullName>
    <description>PacPoint KN081419 - Created for PVL</description>
    <label>Last Received Date Accepted</label>
    <type>Date</type>
</CustomField>