force-app/main/default/objects/LicenseType__c/fields/LateInactiveRenewalFee__c.field-meta.xml
<CustomField>
    <fullName>LateInactiveRenewalFee__c</fullName>
    <label>Late Inactive Renewal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>