force-app/main/default/objects/LicenseType__c/fields/LateRenewalFeewPrivilege__c.field-meta.xml
<CustomField>
    <fullName>LateRenewalFeewPrivilege__c</fullName>
    <inlineHelpText>If renewing late with a privilege has a different fee, then enter the total amount to renew late with a privilege. If renewing late with the privilege does not have a different fee, then leave this field blank.</inlineHelpText>
    <label>Late Renewal Fee w/ Privilege</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>