force-app/main/default/objects/LicenseType__c/fields/LicenseFees__c.field-meta.xml
<CustomField>
    <fullName>LicenseFees__c</fullName>
    <defaultValue>true</defaultValue>
    <description>PacPoint-FT100519 - Created for PVL phase 1</description>
    <label>License Fees</label>
    <type>Checkbox</type>
</CustomField>