force-app/main/default/objects/LicenseType__c/fields/LicenseFeesNotification__c.field-meta.xml
<CustomField>
    <fullName>LicenseFeesNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN111829-Created for PVL Sprint 2 Phase 1</description>
    <inlineHelpText>This is the template used to generate the Additional Requirements (L1) Letter.</inlineHelpText>
    <label>License Fees Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Additional Requirements Notification)</relationshipLabel>
    <relationshipName>License_Types2</relationshipName>
    <type>Lookup</type>
</CustomField>