force-app/main/default/objects/LicenseType__c/fields/LicenseGenericLetter__c.field-meta.xml
<CustomField>
    <fullName>LicenseGenericLetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN10282020 - Created for PVL Sprint 7 Phase 1</description>
    <label>License Generic Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (License Generic Letter)</relationshipLabel>
    <relationshipName>License_TypesSuGy</relationshipName>
    <type>Lookup</type>
</CustomField>