force-app/main/default/objects/LicenseType__c/fields/LicenseNamesAllowed__c.field-meta.xml
<CustomField>
    <fullName>LicenseNamesAllowed__c</fullName>
    <inlineHelpText>f blank, trade/professional names are not allowed for this license type. If a number is entered, it indicates the maximum number of active trade/professional names allowed. (The enforcement of this maximum number is not currently automated.)</inlineHelpText>
    <label>License Names Allowed</label>
    <length>10</length>
    <type>Text</type>
</CustomField>