force-app/main/default/objects/LicenseType__c/fields/LicenseNumberAssignmentCode__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumberAssignmentCode__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <label>License Number Assignment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIC</fullName>
            </value>
            <value>
                <fullName>BRD</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>