force-app/main/default/objects/LicenseType__c/fields/LicensePeriodYears__c.field-meta.xml
<CustomField>
    <fullName>LicensePeriodYears__c</fullName>
    <formula>DurationofLicenseInMonths__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Period Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>