force-app/main/default/objects/LicenseType__c/fields/LicensePrefix__c.field-meta.xml
<CustomField>
    <fullName>LicensePrefix__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>This is the 2 or 3 digit code that will all licenses numbers of this type will start with.</inlineHelpText>
    <label>License Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>