force-app/main/default/objects/LicenseType__c/fields/LicenseRecordType__c.field-meta.xml
<CustomField>
    <fullName>LicenseRecordType__c</fullName>
    <description>PacPoint: RdG - Case#  8761 - For PVL Phase 1 - Record Type to use on  License creation</description>
    <inlineHelpText>This is the mapping of the License Type to the License Record that will get created.</inlineHelpText>
    <label>License Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>