force-app/main/default/objects/LicenseType__c/fields/LicenseRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>LicenseRecordTypeId__c</fullName>
    <description>PacPoint-MV091819 - Created for PVL phase 1. To be used when converting a license to an application with a pb.</description>
    <label>License Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>