force-app/main/default/objects/LicenseType__c/fields/LicenseTypeCodeAndName__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypeCodeAndName__c</fullName>
    <description>Formula field to concatenate LicenseType Code and their description together for use in Flag Multiple License Types for Audit Screen Flow</description>
    <formula>Name + &apos;: &apos; +  LicenseType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LicenseType Code and Name</label>
    <type>Text</type>
</CustomField>