force-app/main/default/objects/LicenseType__c/fields/LicenseTypeEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypeEffectiveDate__c</fullName>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <inlineHelpText>The effective start date of the license type</inlineHelpText>
    <label>License Type Effective Date</label>
    <type>Date</type>
</CustomField>