force-app/main/default/objects/LicenseType__c/fields/LicenseTypeExpireDate__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypeExpireDate__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <formula>IF(  RollingLicensePeriod__c  = FALSE, (ADDMONTHS( LicenseTypeEffectiveDate__c , DurationofLicenseInMonths__c ))- 1 , NULL)</formula>
    <inlineHelpText>The date on which the license expires</inlineHelpText>
    <label>License Type Expire Date</label>
    <type>Date</type>
</CustomField>