force-app/main/default/objects/LicenseType__c/fields/MethodofLicensureRenewalNotice__c.field-meta.xml
<CustomField>
    <fullName>MethodofLicensureRenewalNotice__c</fullName>
    <inlineHelpText>This restricts which licenses will get renewal forms.  Only licenses with this Method of Licensure will get renewal forms generated.  Leave blank if you do not want to restrict by Method of Licensure.</inlineHelpText>
    <label>Method of Licensure (Renewal Notice)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MethodofLicensure</valueSetName>
    </valueSet>
</CustomField>