force-app/main/default/objects/LicenseType__c/fields/MultiSelectDependentLicenseType1__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectDependentLicenseType1__c</fullName>
    <label>MultiSelect Dependent License Type 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACU</fullName>
            </value>
            <value>
                <fullName>ACUI</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>ADB</fullName>
            </value>
            <value>
                <fullName>AIT</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>AMD</fullName>
            </value>
            <value>
                <fullName>AOUO</fullName>
            </value>
            <value>
                <fullName>APRN</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AUC</fullName>
            </value>
            <value>
                <fullName>AUCR</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>AUD - Temp</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BAP</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>BAS</fullName>
            </value>
            <value>
                <fullName>BEO</fullName>
            </value>
            <value>
                <fullName>BEP</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
            <value>
                <fullName>BSH</fullName>
            </value>
            <value>
                <fullName>BXA</fullName>
            </value>
            <value>
                <fullName>BXB</fullName>
            </value>
            <value>
                <fullName>BXJ</fullName>
            </value>
            <value>
                <fullName>BXM</fullName>
            </value>
            <value>
                <fullName>BXMM</fullName>
            </value>
            <value>
                <fullName>BXPH</fullName>
            </value>
            <value>
                <fullName>BXPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>