force-app/main/default/objects/LicenseType__c/fields/NextLicensePeriod__c.field-meta.xml
<CustomField>
    <fullName>NextLicensePeriod__c</fullName>
    <formula>TEXT(MONTH( NextLicensePeriodEffectiveDate__c ))
+ &quot;/&quot;
+ TEXT(DAY( NextLicensePeriodEffectiveDate__c ))
+ &quot;/&quot;
+ TEXT(YEAR( NextLicensePeriodEffectiveDate__c ))
+ &quot; - &quot;
+ TEXT(MONTH( NextLicensePeriodExpireDate__c ))
+ &quot;/&quot;
+ TEXT(DAY( NextLicensePeriodExpireDate__c ))
+ &quot;/&quot;
+ TEXT(YEAR( NextLicensePeriodExpireDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next License Period</label>
    <type>Text</type>
</CustomField>