force-app/main/default/objects/LicenseType__c/fields/NextLicensePeriodEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>NextLicensePeriodEffectiveDate__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <formula>IF
(
((ADDMONTHS( Today() , 6 ))- 1) &gt; LicenseTypeExpireDate__c
,
LicenseTypeExpireDate__c + 1
,
LicenseTypeEffectiveDate__c
)</formula>
    <label>Next License Period Effective Date</label>
    <type>Date</type>
</CustomField>