force-app/main/default/objects/LicenseType__c/fields/NextLicensePeriodExpireDate__c.field-meta.xml
<CustomField>
    <fullName>NextLicensePeriodExpireDate__c</fullName>
    <description>PacPoint-IC080519- Created for PVL phase 1</description>
    <formula>ADDMONTHS( NextLicensePeriodEffectiveDate__c , DurationofLicenseInMonths__c ) - 1</formula>
    <label>Next License Period Expire Date</label>
    <type>Date</type>
</CustomField>