force-app/main/default/objects/LicenseType__c/fields/NonRenewalInformation__c.field-meta.xml
<CustomField>
    <fullName>NonRenewalInformation__c</fullName>
    <description>PacPoint-DN06242020_Created for PVL Phase 1 Sprint 6</description>
    <label>Non Renewal Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>