force-app/main/default/objects/LicenseType__c/fields/NonRenewalNotification__c.field-meta.xml
<CustomField>
    <fullName>NonRenewalNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN03122020-Created for PVL Phase 1 Sprint 3</description>
    <label>Non Renewal Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Non Renewal Notification)</relationshipLabel>
    <relationshipName>License_Typeskcip</relationshipName>
    <type>Lookup</type>
</CustomField>