force-app/main/default/objects/LicenseType__c/fields/NoticeofAuditNotification__c.field-meta.xml
<CustomField>
    <fullName>NoticeofAuditNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV120519 - Created for PVL phase 1</description>
    <label>Notice of Audit Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Notice of Audit Notification)</relationshipLabel>
    <relationshipName>License_Types9</relationshipName>
    <type>Lookup</type>
</CustomField>