force-app/main/default/objects/LicenseType__c/fields/NoticeofForfeitCONTINSBONDNotific__c.field-meta.xml
<CustomField>
    <fullName>NoticeofForfeitCONTINSBONDNotific__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN04142020-Created for PVL Phase 1 Sprint 3</description>
    <label>Notice of Forfeit CONT INS/BOND Notific.</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Notice of Forfeit CONT INS/BOND Notific.)</relationshipLabel>
    <relationshipName>License_TypespLoj</relationshipName>
    <type>Lookup</type>
</CustomField>