force-app/main/default/objects/LicenseType__c/fields/NoticeofLicensureEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>NoticeofLicensureEmailTemplate__c</fullName>
    <formula>NoticeofLicensureNotification__r.DocumentTemplateName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notice of Licensure Email Template</label>
    <type>Text</type>
</CustomField>