force-app/main/default/objects/LicenseType__c/fields/NoticeofLicensureLICFNotification__c.field-meta.xml
<CustomField>
    <fullName>NoticeofLicensureLICFNotification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-DN03022021</description>
    <label>Notice of Licensure LICF Notification</label>
    <referenceTo>DocGeneratorSettings__c</referenceTo>
    <relationshipLabel>License Types (Notice of Licensure LICF Notification)</relationshipLabel>
    <relationshipName>License_TypesCQbI</relationshipName>
    <type>Lookup</type>
</CustomField>